[gd_scene load_steps=11 format=4 uid="uid://djog75ckri4ev"]

[ext_resource type="TileSet" uid="uid://c8vski4h0kigc" path="res://assets/tileset.tres" id="1_3t5sg"]
[ext_resource type="Script" uid="uid://bthgrsqg6rsm4" path="res://scripts/room.gd" id="1_8oql1"]
[ext_resource type="PackedScene" uid="uid://d0wombqlmqfp6" path="res://scenes/room_2.tscn" id="2_0akh5"]
[ext_resource type="PackedScene" uid="uid://clmk2mwyptn4n" path="res://scenes/note.tscn" id="2_vu5en"]
[ext_resource type="LabelSettings" uid="uid://dt4yfk6wtlu3k" path="res://assets/font_label_settings.tres" id="4_irjyx"]
[ext_resource type="PackedScene" uid="uid://2or3jkig6xa2" path="res://scenes/tile_part_exit.tscn" id="4_xhekj"]
[ext_resource type="Script" uid="uid://cquu7cjvwruw4" path="res://scripts/loop_reactor.gd" id="6_d0u7m"]
[ext_resource type="Texture2D" uid="uid://dop8ocbwsibm7" path="res://assets/groundTiles.png" id="7_d0u7m"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d0u7m"]
texture = ExtResource("7_d0u7m")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:1/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
3:2/0 = 0
4:1/0 = 0

[sub_resource type="TileSet" id="TileSet_wy464"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_d0u7m")

[node name="Room" type="Node2D" node_paths=PackedStringArray("player_spawn_point")]
script = ExtResource("1_8oql1")
player_spawn_point = NodePath("Tiles1/player_spawn_point")
next_level_prefab = ExtResource("2_0akh5")
n_notes = 3

[node name="Tiles1" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAPz/AQAAAAAAAAABAPz/AQAAAAAAAAACAPz/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAGAPz/AQAAAAAAAAAHAPz/AQAAAAAAAAAIAPz/AQAAAAAAAAAJAPz/AQAAAAAAAAAKAPz/AQAAAAAAAAALAPz/AQAAAAAAAAAMAPz/AQAAAAAAAAANAPz/AQAAAAAAAAAOAPz/AQAAAAAAAAAPAPz/AQAAAAAAAAAQAPz/AQAAAAAAAAARAPz/AQAAAAAAAAASAPz/AQAAAAAAAAATAPz/AQAAAAAAAAAUAPz/AQAAAAAAAAAVAPz/AQAAAAAAAAAWAPz/AQAAAAAAAAAXAPz/AQAAAAAAAAAYAPz/AQAAAAAAAAAZAPz/AQAAAAAAAAAaAPz/AQAAAAAAAAAbAPz/AQAAAAAAAAAcAPz/AQAAAAAAAAAdAPz/AQAAAAAAAAAeAPz/AQAAAAAAAAAfAPz/AQAAAAAAAAAgAPz/AQAAAAAAAAAhAPz/AQAAAAAAAAAiAPz/AQAAAAAAAAAjAPz/AQAAAAAAAAAkAPz/AQAAAAAAAAAlAPz/AQAAAAAAAAAmAPz/AQAAAAAAAAAnAPz/AQAAAAAAAAAoAPz/AQAAAAAAAAAdAPv/AgAAAAAAAAAeAPv/AgAAAAAAAAAfAPv/AgAAAAAAAAApAPz/AQAAAAAAAAAqAPz/AQAAAAAAAAArAPz/AQAAAAAAAAAsAPz/AQAAAAAAAAAtAPz/AQAAAAAAAAAuAPz/AQAAAAAAAAAvAPz/AQAAAAAAAAAwAPz/AQAAAAAAAAAxAPz/AQAAAAAAAAAyAPz/AQAAAAAAAAAzAPz/AQAAAAAAAAA0APz/AQAAAAAAAAA1APz/AQAAAAAAAAA2APz/AQAAAAAAAAA3APz/AQAAAAAAAAA4APz/AQAAAAAAAAA5APz/AQAAAAAAAAA6APz/AQAAAAAAAAA7APz/AQAAAAAAAAA8APz/AQAAAAAAAAA9APz/AQAAAAAAAAA+APz/AQAAAAAAAAA/APz/AQAAAAAAAABAAPz/AQAAAAAAAABBAPz/AQAAAAAAAAAqAPv/AQAAAAAAAAAqAPr/AQAAAAAAAAArAPr/AQAAAAAAAAArAPv/AQAAAAAAAAAsAPr/AQAAAAAAAAAsAPv/AQAAAAAAAAAtAPr/AQAAAAAAAAAtAPv/AQAAAAAAAAAyAPf/AQAAAAAAAAAzAPf/AQAAAAAAAAA0APf/AQAAAAAAAAA1APf/AQAAAAAAAAA2APf/AQAAAAAAAAA3APf/AQAAAAAAAAA4APf/AQAAAAAAAAAuAPr/AQAAAAAAAAAuAPv/AQAAAAAAAABCAPz/AQAAAAAAAABDAPz/AQAAAAAAAABEAPz/AQAAAAAAAABFAPz/AQAAAAAAAABGAPz/AQAAAAAAAABHAPz/AQAAAAAAAABIAPz/AQAAAAAAAABJAPz/AQAAAAAAAABKAPz/AQAAAAAAAABLAPz/AQAAAAAAAABMAPz/AQAAAAAAAABNAPz/AQAAAAAAAABOAPz/AQAAAAAAAABPAPz/AQAAAAAAAABQAPz/AQAAAAAAAABRAPz/AQAAAAAAAABSAPz/AQAAAAAAAABTAPz/AQAAAAAAAABUAPz/AQAAAAAAAABVAPz/AQAAAAAAAABWAPz/AQAAAAAAAABKAPj/AQAAAAAAAABKAPn/AgAAAAAAADBLAPj/AQAAAAAAAABLAPn/AgAAAAAAADBMAPj/AQAAAAAAAABMAPn/AgAAAAAAADBNAPj/AQAAAAAAAABNAPn/AgAAAAAAADBOAPj/AQAAAAAAAABOAPn/AgAAAAAAADBPAPj/AQAAAAAAAABPAPn/AgAAAAAAADBPAPD/AgAAAAAAAGBPAPH/AgAAAAAAAGBPAPL/AgAAAAAAAGBPAPP/AgAAAAAAAGBPAPT/AgAAAAAAAGBPAPX/AgAAAAAAAGBPAPb/AgAAAAAAAGBPAPf/AgAAAAAAAGBQAPD/AQAAAAAAAABQAPH/AQAAAAAAAABQAPL/AQAAAAAAAABQAPP/AQAAAAAAAABQAPT/AQAAAAAAAABQAPX/AQAAAAAAAABQAPb/AQAAAAAAAABQAPf/AQAAAAAAAABQAPj/AQAAAAAAAABQAPn/AgAAAAAAADBUAPj/AQAAAAAAAABUAPn/AgAAAAAAADBVAPj/AQAAAAAAAABVAPn/AgAAAAAAADBWAPj/AQAAAAAAAABWAPn/AgAAAAAAADBXAPj/AQAAAAAAAABXAPn/AgAAAAAAADBYAPj/AQAAAAAAAABYAPn/AgAAAAAAADBZAPj/AQAAAAAAAABZAPn/AgAAAAAAADBaAPj/AQAAAAAAAABaAPn/AgAAAAAAADBbAPj/AQAAAAAAAABbAPn/AgAAAAAAADBcAPj/AQAAAAAAAABcAPn/AgAAAAAAADBXAPz/AQAAAAAAAABYAPz/AQAAAAAAAABZAPz/AQAAAAAAAABaAPz/AQAAAAAAAABbAPz/AQAAAAAAAABcAPz/AQAAAAAAAABdAPz/AQAAAAAAAABeAPz/AQAAAAAAAABfAPz/AQAAAAAAAAA=")
tile_set = ExtResource("1_3t5sg")

[node name="player_spawn_point" type="Node2D" parent="Tiles1"]
position = Vector2(22, -55)

[node name="Note" parent="Tiles1" node_paths=PackedStringArray("room") instance=ExtResource("2_vu5en")]
position = Vector2(448, -84)
room = NodePath("../..")

[node name="Note2" parent="Tiles1" node_paths=PackedStringArray("room") instance=ExtResource("2_vu5en")]
position = Vector2(733, -77)
room = NodePath("../..")

[node name="Label2" type="Label" parent="Tiles1"]
offset_left = 194.0
offset_top = -120.0
offset_right = 306.0
offset_bottom = -99.0
text = "SPACE 
to jump"
label_settings = ExtResource("4_irjyx")

[node name="space_to_start" type="Label" parent="Tiles1"]
offset_left = 9.0
offset_top = -97.0
offset_right = 113.0
offset_bottom = -76.0
text = "SPACE
to start"
label_settings = ExtResource("4_irjyx")
script = ExtResource("6_d0u7m")

[node name="Label3" type="Label" parent="Tiles1"]
offset_left = 386.0
offset_top = -117.0
offset_right = 490.0
offset_bottom = -96.0
text = "Gather notes"
label_settings = ExtResource("4_irjyx")

[node name="if_loop" type="Label" parent="Tiles1"]
visible = false
offset_left = 8.0
offset_top = -96.0
offset_right = 176.0
offset_bottom = -75.0
text = "LOOP
TO FIND ALL THE NOTES"
label_settings = ExtResource("4_irjyx")
script = ExtResource("6_d0u7m")

[node name="Tiles2" type="TileMapLayer" parent="."]
position = Vector2(768, 0)
tile_map_data = PackedByteArray("AAAAAPz/AQAAAAAAAAABAPz/AQAAAAAAAAACAPz/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAGAPz/AQAAAAAAAAAHAPz/AQAAAAAAAAAIAPz/AQAAAAAAAAAJAPz/AQAAAAAAAAAKAPz/AQAAAAAAAAALAPz/AQAAAAAAAAAMAPz/AQAAAAAAAAANAPz/AQAAAAAAAAAOAPz/AQAAAAAAAAAPAPz/AQAAAAAAAAAQAPz/AQAAAAAAAAARAPz/AQAAAAAAAAASAPz/AQAAAAAAAAATAPz/AQAAAAAAAAAUAPz/AQAAAAAAAAAVAPz/AQAAAAAAAAAWAPz/AQAAAAAAAAAXAPz/AQAAAAAAAAAYAPz/AQAAAAAAAAAZAPz/AQAAAAAAAAAaAPz/AQAAAAAAAAAbAPz/AQAAAAAAAAAcAPz/AQAAAAAAAAAdAPz/AQAAAAAAAAAeAPz/AQAAAAAAAAAfAPz/AQAAAAAAAAAgAPz/AQAAAAAAAAAhAPz/AQAAAAAAAAAiAPz/AQAAAAAAAAAjAPz/AQAAAAAAAAAkAPz/AQAAAAAAAAAlAPz/AQAAAAAAAAAmAPz/AQAAAAAAAAAnAPz/AQAAAAAAAAAoAPz/AQAAAAAAAAAQAPn/AQAAAAAAAAAPAPn/AQAAAAAAAAAPAPr/AQAAAAAAAAAPAPv/AQAAAAAAAAAQAPv/AQAAAAAAAAAQAPr/AQAAAAAAAAATAPf/AQAAAAAAAAATAPj/AQAAAAAAAAATAPn/AQAAAAAAAAATAPr/AQAAAAAAAAATAPv/AQAAAAAAAAAUAPf/AQAAAAAAAAAUAPj/AQAAAAAAAAAUAPn/AQAAAAAAAAAUAPr/AQAAAAAAAAAUAPv/AQAAAAAAAAAXAPX/AQAAAAAAAAAXAPb/AQAAAAAAAAAXAPf/AQAAAAAAAAAXAPj/AQAAAAAAAAAXAPn/AQAAAAAAAAAXAPr/AQAAAAAAAAAXAPv/AQAAAAAAAAAYAPv/AQAAAAAAAAAYAPr/AQAAAAAAAAAYAPn/AQAAAAAAAAAYAPj/AQAAAAAAAAAYAPf/AQAAAAAAAAAYAPb/AQAAAAAAAAAYAPX/AQAAAAAAAAARAPv/AgAAAAAAAAASAPv/AgAAAAAAAAAZAPv/AgAAAAAAAAAaAPv/AgAAAAAAAAAbAPv/AgAAAAAAAAAcAPv/AgAAAAAAAAAVAPv/AQAAAAAAAAAWAPv/AQAAAAAAAAAWAPr/AQAAAAAAAAAVAPr/AQAAAAAAAAAVAPn/AgAAAAAAAAAWAPn/AgAAAAAAAAA=")
tile_set = ExtResource("1_3t5sg")

[node name="Note3" parent="Tiles2" node_paths=PackedStringArray("room") instance=ExtResource("2_vu5en")]
position = Vector2(226, -120)
room = NodePath("../..")

[node name="Transition" type="TileMapLayer" parent="."]
position = Vector2(1096, 0)
tile_map_data = PackedByteArray("AAAAAPz/AQAAAAAAAAABAPz/AQAAAAAAAAACAPz/AQAAAAAAAAADAPz/AQAAAAAAAAAEAPz/AQAAAAAAAAAFAPz/AQAAAAAAAAAGAPz/AQAAAAAAAAAHAPz/AQAAAAAAAAAIAPz/AQAAAAAAAAAJAPz/AQAAAAAAAAAKAPz/AQAAAAAAAAALAPz/AQAAAAAAAAAMAPz/AQAAAAAAAAANAPz/AQAAAAAAAAAOAPz/AQAAAAAAAAAPAPz/AQAAAAAAAAAQAPz/AQAAAAAAAAARAPz/AQAAAAAAAAASAPz/AQAAAAAAAAATAPz/AQAAAAAAAAAUAPz/AQAAAAAAAAAVAPz/AQAAAAAAAAAWAPz/AQAAAAAAAAAXAPz/AQAAAAAAAAAYAPz/AQAAAAAAAAAZAPz/AQAAAAAAAAAaAPz/AQAAAAAAAAAbAPz/AQAAAAAAAAAcAPz/AQAAAAAAAAAdAPz/AQAAAAAAAAAeAPz/AQAAAAAAAAAfAPz/AQAAAAAAAAAgAPz/AQAAAAAAAAAhAPz/AQAAAAAAAAAiAPz/AQAAAAAAAAAjAPz/AQAAAAAAAAAkAPz/AQAAAAAAAAAlAPz/AQAAAAAAAAAmAPz/AQAAAAAAAAAnAPz/AQAAAAAAAAAoAPz/AQAAAAAAAAApAPz/AQAAAAAAAAA=")
tile_set = ExtResource("1_3t5sg")

[node name="Exit" parent="Transition" node_paths=PackedStringArray("room") instance=ExtResource("4_xhekj")]
position = Vector2(328, -24)
room = NodePath("../..")

[node name="Label3" type="Label" parent="Transition"]
offset_left = -14.0
offset_top = -137.0
offset_right = 90.0
offset_bottom = -116.0
text = "ヾ(´〇`)ﾉ♪♪♪"
label_settings = ExtResource("4_irjyx")

[node name="Label4" type="Label" parent="Transition"]
offset_left = 118.0
offset_top = -90.0
offset_right = 222.0
offset_bottom = -69.0
text = "〜(￣▽￣〜)"
label_settings = ExtResource("4_irjyx")

[node name="Parts#ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAADAPz/AAABAAAAAAAEAPz/AAABAAAAAAAFAPz/AAABAAAAAAAGAPz/AAABAAAAAAAHAPz/AAABAAAAAAAIAPz/AAABAAAAAAAJAPz/AAABAAAAAAAKAPz/AAABAAAAAAALAPz/AAABAAAAAAAMAPz/AAABAAAAAAANAPz/AAABAAAAAAAOAPz/AAABAAAAAAAPAPz/AAABAAAAAAAQAPz/AAABAAAAAAARAPz/AAABAAAAAAASAPz/AAABAAAAAAATAPz/AAABAAAAAAAUAPz/AAABAAAAAAAVAPz/AAABAAAAAAAWAPz/AAABAAAAAAAXAPz/AAABAAAAAAAYAPz/AAABAAAAAAAZAPz/AAABAAAAAAAaAPz/AAABAAAAAAAbAPz/AAABAAAAAAAcAPz/AAABAAAAAAAdAPz/AAABAAAAAAAeAPz/AAABAAAAAAAfAPz/AAABAAAAAAAgAPz/AAABAAAAAAAhAPz/AAABAAAAAAAiAPz/AAABAAAAAAAjAPz/AAABAAAAAAAkAPz/AAABAAAAAAAlAPz/AAABAAAAAAAmAPz/AAABAAAAAAAnAPz/AAABAAAAAAAoAPz/AAABAAAAAAApAPz/AAABAAAAAAArAPr/AAABAAAAAAAsAPr/AAABAAAAAAAtAPr/AAABAAAAAAAzAPf/AAAFAAAAAAA0APf/AAAFAAAAAAA1APf/AAAFAAAAAAA2APf/AAAFAAAAAAA3APf/AAAFAAAAAAAvAPz/AAABAAAAAAAwAPz/AAABAAAAAAAxAPz/AAABAAAAAAAyAPz/AAABAAAAAAAzAPz/AAABAAAAAAA0APz/AAABAAAAAAA1APz/AAABAAAAAAA2APz/AAABAAAAAAA3APz/AAABAAAAAAA4APz/AAABAAAAAAA5APz/AAABAAAAAAA6APz/AAABAAAAAAA7APz/AAABAAAAAAA8APz/AAABAAAAAAA9APz/AAABAAAAAAA+APz/AAABAAAAAAA/APz/AAABAAAAAABAAPz/AAABAAAAAABBAPz/AAABAAAAAABCAPz/AAABAAAAAABDAPz/AAABAAAAAABEAPz/AAABAAAAAABFAPz/AAABAAAAAABGAPz/AAABAAAAAABHAPz/AAABAAAAAABLAPj/AAAFAAAAAABMAPj/AAAFAAAAAABNAPj/AAAFAAAAAABOAPj/AAAFAAAAAABIAPz/AAABAAAAAABJAPz/AAABAAAAAABKAPz/AAABAAAAAABLAPz/AAABAAAAAABMAPz/AAABAAAAAABNAPz/AAABAAAAAABOAPz/AAABAAAAAABPAPz/AAABAAAAAABQAPz/AAABAAAAAABRAPz/AAABAAAAAABSAPz/AAABAAAAAABTAPz/AAABAAAAAABUAPz/AAABAAAAAABVAPz/AAABAAAAAABWAPz/AAABAAAAAABXAPz/AAABAAAAAABYAPz/AAABAAAAAABZAPz/AAABAAAAAABaAPz/AAABAAAAAABbAPz/AAABAAAAAABcAPz/AAABAAAAAABdAPz/AAABAAAAAABeAPz/AAABAAAAAABfAPz/AAABAAAAAABgAPz/AAABAAAAAABhAPz/AAABAAAAAABiAPz/AAABAAAAAABjAPz/AAABAAAAAABkAPz/AAABAAAAAABlAPz/AAABAAAAAABmAPz/AAABAAAAAABnAPz/AAABAAAAAABoAPz/AAABAAAAAABpAPz/AAABAAAAAABqAPz/AAABAAAAAABrAPz/AAABAAAAAABsAPz/AAABAAAAAABtAPz/AAABAAAAAAAqAPr/AAAAAAAAAAAuAPr/AAACAAAAAAAqAPv/AAAAAAEAAAAuAPv/AAACAAEAAAArAPv/AAABAAEAAAAsAPv/AAABAAEAAAAtAPv/AAABAAEAAAAqAPz/AAABAAEAAAArAPz/AAABAAEAAAAsAPz/AAABAAEAAAAtAPz/AAABAAEAAAAuAPz/AAABAAEAAAAyAPf/AAAEAAAAAAA4APf/AAAGAAAAAABQAPD/AAADAAAAAABQAPH/AAADAAEAAABQAPL/AAADAAEAAABQAPP/AAADAAEAAABQAPT/AAADAAEAAABQAPX/AAADAAEAAABQAPb/AAADAAEAAABQAPf/AAADAAEAAABQAPj/AAACAAIAAABPAPj/AAAFAAAAAABKAPj/AAAEAAAAAABUAPj/AAAEAAAAAABcAPj/AAAGAAAAAABVAPj/AAAFAAAAAABWAPj/AAAFAAAAAABXAPj/AAAFAAAAAABYAPj/AAAFAAAAAABZAPj/AAAFAAAAAABaAPj/AAAFAAAAAABbAPj/AAAFAAAAAABvAPn/AAAAAAAAAABwAPn/AAACAAAAAABwAPr/AAACAAEAAABwAPv/AAACAAEAAABvAPr/AAAAAAEAAABvAPv/AAAAAAEAAABuAPz/AAABAAAAAABvAPz/AAABAAEAAABwAPz/AAABAAEAAABxAPz/AAABAAAAAAByAPz/AAABAAAAAABzAPz/AAABAAEAAAB0APz/AAABAAEAAAB0APr/AAABAAEAAAB1APr/AAABAAAAAAB2APr/AAABAAAAAAB2APv/AAABAAEAAAB3APv/AAABAAEAAAB3APr/AAABAAEAAAB0APv/AAABAAEAAAB1APv/AAABAAEAAAB1APz/AAABAAEAAAB2APz/AAABAAEAAAB3APz/AAABAAEAAAB4APz/AAABAAEAAABzAPv/AAAAAAEAAABzAPr/AAAAAAEAAABzAPn/AAAAAAEAAABzAPj/AAAAAAEAAABzAPf/AAAAAAAAAAB3APX/AAAAAAAAAAB0APf/AAACAAAAAAB4APX/AAACAAAAAAB4APb/AAACAAEAAAB4APf/AAACAAEAAAB4APj/AAACAAEAAAB4APn/AAACAAEAAAB4APr/AAACAAEAAAB4APv/AAACAAEAAAB0APj/AAACAAEAAAB0APn/AAACAAEAAAB3APb/AAAAAAEAAAB3APf/AAAAAAEAAAB3APj/AAAAAAEAAAB3APn/AAAAAAEAAAB5APz/AAABAAAAAAB6APz/AAABAAAAAAB7APz/AAABAAAAAAB8APz/AAABAAAAAAB9APz/AAABAAAAAAB+APz/AAABAAAAAAB/APz/AAABAAAAAACAAPz/AAABAAAAAACBAPz/AAABAAAAAACCAPz/AAABAAAAAACDAPz/AAABAAAAAACEAPz/AAABAAAAAACFAPz/AAABAAAAAACGAPz/AAABAAAAAACHAPz/AAABAAAAAACIAPz/AAABAAAAAACJAPz/AAABAAAAAACKAPz/AAABAAAAAACLAPz/AAABAAAAAACMAPz/AAABAAAAAACNAPz/AAABAAAAAACOAPz/AAABAAAAAACPAPz/AAABAAAAAACQAPz/AAABAAAAAACRAPz/AAABAAAAAACSAPz/AAABAAAAAACTAPz/AAABAAAAAACUAPz/AAABAAAAAACVAPz/AAABAAAAAACWAPz/AAABAAAAAACXAPz/AAABAAAAAACYAPz/AAABAAAAAACZAPz/AAABAAAAAACaAPz/AAABAAAAAACbAPz/AAABAAAAAACcAPz/AAABAAAAAACdAPz/AAABAAAAAACeAPz/AAABAAAAAACfAPz/AAABAAAAAACgAPz/AAABAAAAAAChAPz/AAABAAAAAACiAPz/AAABAAAAAACjAPz/AAABAAAAAACkAPz/AAABAAAAAAClAPz/AAABAAAAAACmAPz/AAABAAAAAACnAPz/AAABAAAAAACoAPz/AAABAAAAAACpAPz/AAABAAAAAACqAPz/AAABAAAAAACrAPz/AAABAAAAAACsAPz/AAABAAAAAACtAPz/AAABAAAAAACuAPz/AAABAAAAAACvAPz/AAABAAAAAACwAPz/AAABAAAAAACxAPz/AAABAAAAAACyAPz/AAABAAAAAACxAP3/AAABAAIAAACwAP3/AAABAAIAAACvAP3/AAABAAIAAACuAP3/AAABAAIAAACtAP3/AAABAAIAAACsAP3/AAABAAIAAACrAP3/AAABAAIAAACqAP3/AAABAAIAAACpAP3/AAABAAIAAACoAP3/AAABAAIAAACnAP3/AAABAAIAAACmAP3/AAABAAIAAAClAP3/AAABAAIAAACkAP3/AAABAAIAAACjAP3/AAABAAIAAACiAP3/AAABAAIAAAChAP3/AAABAAIAAACgAP3/AAABAAIAAACfAP3/AAABAAIAAACeAP3/AAABAAIAAACdAP3/AAABAAIAAACcAP3/AAABAAIAAACbAP3/AAABAAIAAACaAP3/AAABAAIAAACZAP3/AAABAAIAAACYAP3/AAABAAIAAACXAP3/AAABAAIAAACWAP3/AAABAAIAAACVAP3/AAABAAIAAACUAP3/AAABAAIAAACTAP3/AAABAAIAAACSAP3/AAABAAIAAACRAP3/AAABAAIAAACQAP3/AAABAAIAAACPAP3/AAABAAIAAACOAP3/AAABAAIAAACNAP3/AAABAAIAAACMAP3/AAABAAIAAACLAP3/AAABAAIAAACKAP3/AAABAAIAAACJAP3/AAABAAIAAACIAP3/AAABAAIAAACHAP3/AAABAAIAAACGAP3/AAABAAIAAACFAP3/AAABAAIAAACEAP3/AAABAAIAAACDAP3/AAABAAIAAACCAP3/AAABAAIAAACBAP3/AAABAAIAAACAAP3/AAABAAIAAAB/AP3/AAABAAIAAAB+AP3/AAABAAIAAAB9AP3/AAABAAIAAAB8AP3/AAABAAIAAAB7AP3/AAABAAIAAAB6AP3/AAABAAIAAAB5AP3/AAABAAIAAAB4AP3/AAABAAIAAAB3AP3/AAABAAIAAAB2AP3/AAABAAIAAAB1AP3/AAABAAIAAAB0AP3/AAABAAIAAABzAP3/AAABAAIAAAByAP3/AAABAAIAAABxAP3/AAABAAIAAABwAP3/AAABAAIAAABvAP3/AAABAAIAAABuAP3/AAABAAIAAABtAP3/AAABAAIAAABsAP3/AAABAAIAAABrAP3/AAABAAIAAABqAP3/AAABAAIAAABpAP3/AAABAAIAAABoAP3/AAABAAIAAABnAP3/AAABAAIAAABmAP3/AAABAAIAAABlAP3/AAABAAIAAABkAP3/AAABAAIAAABjAP3/AAABAAIAAABiAP3/AAABAAIAAABhAP3/AAABAAIAAABgAP3/AAABAAIAAABfAP3/AAABAAIAAABeAP3/AAABAAIAAABdAP3/AAABAAIAAABcAP3/AAABAAIAAABbAP3/AAABAAIAAABaAP3/AAABAAIAAABZAP3/AAABAAIAAABYAP3/AAABAAIAAABXAP3/AAABAAIAAABWAP3/AAABAAIAAABVAP3/AAABAAIAAABUAP3/AAABAAIAAABTAP3/AAABAAIAAABSAP3/AAABAAIAAABRAP3/AAABAAIAAABQAP3/AAABAAIAAABPAP3/AAABAAIAAABOAP3/AAABAAIAAABNAP3/AAABAAIAAABMAP3/AAABAAIAAABLAP3/AAABAAIAAABKAP3/AAABAAIAAABJAP3/AAABAAIAAABIAP3/AAABAAIAAABHAP3/AAABAAIAAABGAP3/AAABAAIAAABFAP3/AAABAAIAAABEAP3/AAABAAIAAABDAP3/AAABAAIAAABCAP3/AAABAAIAAABBAP3/AAABAAIAAABAAP3/AAABAAIAAAA/AP3/AAABAAIAAAA+AP3/AAABAAIAAAA9AP3/AAABAAIAAAA8AP3/AAABAAIAAAA7AP3/AAABAAIAAAA6AP3/AAABAAIAAAA5AP3/AAABAAIAAAA4AP3/AAABAAIAAAA3AP3/AAABAAIAAAA2AP3/AAABAAIAAAA1AP3/AAABAAIAAAA0AP3/AAABAAIAAAAzAP3/AAABAAIAAAAyAP3/AAABAAIAAAAxAP3/AAABAAIAAAAwAP3/AAABAAIAAAAvAP3/AAABAAIAAAAuAP3/AAABAAIAAAAtAP3/AAABAAIAAAAsAP3/AAABAAIAAAArAP3/AAABAAIAAAAqAP3/AAABAAIAAAApAP3/AAABAAIAAAAoAP3/AAABAAIAAAAnAP3/AAABAAIAAAAmAP3/AAABAAIAAAAlAP3/AAABAAIAAAAkAP3/AAABAAIAAAAjAP3/AAABAAIAAAAiAP3/AAABAAIAAAAhAP3/AAABAAIAAAAgAP3/AAABAAIAAAAfAP3/AAABAAIAAAAeAP3/AAABAAIAAAAdAP3/AAABAAIAAAAcAP3/AAABAAIAAAAbAP3/AAABAAIAAAAaAP3/AAABAAIAAAAZAP3/AAABAAIAAAAYAP3/AAABAAIAAAAXAP3/AAABAAIAAAAWAP3/AAABAAIAAAAVAP3/AAABAAIAAAAUAP3/AAABAAIAAAATAP3/AAABAAIAAAASAP3/AAABAAIAAAARAP3/AAABAAIAAAAQAP3/AAABAAIAAAAPAP3/AAABAAIAAAAOAP3/AAABAAIAAAANAP3/AAABAAIAAAAMAP3/AAABAAIAAAALAP3/AAABAAIAAAAKAP3/AAABAAIAAAAJAP3/AAABAAIAAAAIAP3/AAABAAIAAAAHAP3/AAABAAIAAAAGAP3/AAABAAIAAAAFAP3/AAABAAIAAAAEAP3/AAABAAIAAAADAP3/AAABAAIAAAAAAP3/AAABAAIAAAABAP3/AAABAAIAAAACAP3/AAABAAIAAAACAPz/AAABAAAAAAABAPz/AAABAAAAAAAAAPz/AAABAAAAAACyAP3/AAABAAIAAAA=")
tile_set = SubResource("TileSet_wy464")

[connection signal="level_looped" from="." to="Tiles1/space_to_start" method="destroy"]
[connection signal="level_looped" from="." to="Tiles1/if_loop" method="make_visible"]
